`Fix` - Overflow-X

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
   color-scheme: dark;
+  overflow-x: hidden;
 }
 
 .nav-links::after {
